--- a/environment.yml
+++ b/environment.yml
@@ -23,9 +23,8 @@ dependencies:
     - requests
     - ache >=0.8.0
     - jinja2
-    - bokeh=0.10.0
-    - topik
     - functools32
     - networkx=1.11
     - nodejs
     - futures
+    - ddt-word2vec
