--- a/elastic/mapping.json
+++ b/elastic/mapping.json
@@ -24,6 +24,10 @@
         "type": "string",
 	"index": "not_analyzed"
       },
+      "subquery": {
+          "type": "string",
+	  "index": "not_analyzed"
+      },
       "retrieved": {
         "type": "date"
       },
