Generate html in the docs dir

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,9 +6,9 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 SPHINXPROJ    = DomainDiscoveryAPI
 SOURCEDIR     = .
-BUILDDIR      = ../../domain_discovery_API_docs
+BUILDDIR      = .
 PDFBUILDDIR   = /tmp
-PDF           = ../manual.pdf
+PDF           = manual.pdf
 
 # Put it first so that "make" without argument is like "make help".
 help:
