--- a/elastic/mapping.json
+++ b/elastic/mapping.json
@@ -12,6 +12,10 @@
         "type": "string",
         "index": "not_analyzed"
       },
+      "domain": {
+        "type": "string",
+        "index": "not_analyzed"
+      },
       "text": {
         "type": "string",
         "term_vector": "yes"
