--- a/seeds_generator/conf/config.properties
+++ b/seeds_generator/conf/config.properties
@@ -1,3 +1,3 @@
-ACCOUNTKEY SYQ5NpERm7UmF1ZCdysXfQjS5wD41a27sSnBS5KReqA
 ACCOUNTKEY_GOOG AIzaSyADaHyjihNC3591IehV5pcmqK044jdrFEM
 CSE_ID_GOOG 016642719151054520299:gftwrd3ql-m
+ACCOUNTKEY_BING 2906061973594ef684f932436c69f45d
