--- a/environment.yml
+++ b/environment.yml
@@ -21,10 +21,10 @@ dependencies:
     - pyelasticsearch >=1.2
     - cherrypy
     - requests
-    - ache >=0.8.0
+    - ache ==latest
     - jinja2
     - functools32
     - networkx=1.11
     - nodejs
     - futures
-    - ddt-word2vec
+    
