--- a/seeds_generator/conf/config.properties
+++ b/seeds_generator/conf/config.properties
@@ -1,3 +1,4 @@
 ACCOUNTKEY_GOOG AIzaSyADaHyjihNC3591IehV5pcmqK044jdrFEM
 CSE_ID_GOOG 016642719151054520299:gftwrd3ql-m
-ACCOUNTKEY_BING 7ef3f77e1f874a86b61068826ea6a87b
+#ACCOUNTKEY_BING 2906061973594ef684f932436c69f45d
+ACCOUNTKEY_BING c7242ddb77a541ebb9900d560f896aff
