--- a/seeds_generator/conf/config.properties
+++ b/seeds_generator/conf/config.properties
@@ -1,4 +1,4 @@
-ACCOUNTKEY_GOOG AIzaSyADaHyjihNC3591IehV5pcmqK044jdrFEM
-CSE_ID_GOOG 016642719151054520299:gftwrd3ql-m
+ACCOUNTKEY_GOOG AIzaSyDDh1nvPPR_jYBhEFy3OjPQkghpCRIDnJo
+CSE_ID_GOOG 011651192480399594743:_frmh4fxqoy
 ACCOUNTKEY_BING c47097108aa94b87a8c07f5da6c82793 
 #ACCOUNTKEY_BING 82e3f1ac3de24f3fb5f90544c436f092 
