--- a/elastic/mapping.json
+++ b/elastic/mapping.json
@@ -13,7 +13,13 @@
 	  "index": "not_analyzed"
       },
       "domain": {
-        "type": "string"
+          "type": "string",
+	  "fields": {
+              "exact": {
+		  "type": "string",
+		  "index": "not_analyzed"
+              }
+	  }
       },
       "title": {
         "type": "string"
