Added more mappings for description, title and domain

--- a/elastic/config.json
+++ b/elastic/config.json
@@ -33,6 +33,15 @@
 		    },
 		    "content-type":{
 			"type": "string"
+		    },
+		    "description":{
+			"type": "string"
+		    },
+		    "domain": {
+			"type": "string"
+		    },
+		    "title": {
+			"type": "string"			
 		    }
 		}
 	    },
