--- a/seeds_generator/pom.xml
+++ b/seeds_generator/pom.xml
@@ -42,14 +42,22 @@
     <dependency>
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
-      <version>1.5.2</version>
+      <version>1.6.2</version>
     </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.5.4</version>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.1</version>
+	<executions>
+	  <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+	  </execution>
+	</executions>
         <configuration>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
